2009-06-18  Giulio Eulisse <giulio.eulisse@cern.ch>

	* IgProfAnalyse.cc, IgProfAnalyse.h: general clean up of source,
	  removing a few function local static objects used by some of 
	  the tree filters, in order to simplify multiple filter
	  passes. This is in preparation for the --baseline / --diff-mode 
	  options which require multiple passes over the same call tree
	  information.

	* IgProfAnalyse.cc, IgProfAnalyse.h: introduction of the i
	    
	      --baseline <filename>

	  option which allows to read two profiles and use one as
	  baseline for the other. This can be used as a rudimental
	  leak / performance regression detector. 
	  There is moreover a modifier option

	      --diff-mode

	  which allows to show differences between two unrelated runs.
	  Notice that --diff-mode option is mandatory when 
	  the baseline report has even just one single node which has 
	  more counts than the other.

2009-06-15  Lassi A. Tuura  <lat@iki.fi>

	* IgProf.cc (initialize): Start async thread only if dump file
	name is non-empty; typo previously always started the thread.
	(exitThread): Disable profile signal when thread is exiting so
	that the fork() inside popen() for gzip has a chance of finishing
	rather than getting caught into infinite loop on ERESTARTNOINTR.
	(dopthread_create): Do not wrap igprof internal threads.

2009-05-19  Lassi A. Tuura  <lat@iki.fi>

	* IgProfAtomic.h: Add x86-64 support.

	* IgProf.cc (initialise), IgProfPerf (enableTimer): Change the
	performance profiling sampling frequency from 10 to 5ms, it seems
	to still report correct total times; smaller intervals appear to
	result in skew, but I didn't research this closely.

	* IgProfAnalyze.h, IgProfAnalyze.cc: Clean-up type-unsafe code
	which trips up with various errors on 64-bit systems.

2008-03-10  Giulio Eulisse <giulio.eulisse@cern.ch>

	* IgProf.cc (dumpOneProfile): Handles the case a (non-root) 
	frame pointer has zero address.

2008-08-22  Lassi A. Tuura  <lat@iki.fi>
